// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`file format concats dictionary batch vectors into a table 1`] = `"example-csv"`;

exports[`file format concats dictionary batch vectors into a table 2`] = `"Struct_"`;

exports[`file format concats dictionary batch vectors into a table 3`] = `3`;

exports[`file format concats dictionary batch vectors into a table 4`] = `
Array [
  "Hermione",
  25,
  Float32Array [
    -53.235599517822266,
    40.231998443603516,
  ],
]
`;

exports[`file format concats dictionary batch vectors into a table 5`] = `
Array [
  "Severus",
  30,
  Float32Array [
    -62.22999954223633,
    3,
  ],
]
`;

exports[`file format concats dictionary batch vectors into a table 6`] = `
Array [
  "Harry",
  20,
  Float32Array [
    23,
    -100.23652648925781,
  ],
]
`;

exports[`file format concats simple batch vectors into a table 1`] = `"foo"`;

exports[`file format concats simple batch vectors into a table 2`] = `"Int"`;

exports[`file format concats simple batch vectors into a table 3`] = `5`;

exports[`file format concats simple batch vectors into a table 4`] = `1`;

exports[`file format concats simple batch vectors into a table 5`] = `null`;

exports[`file format concats simple batch vectors into a table 6`] = `3`;

exports[`file format concats simple batch vectors into a table 7`] = `4`;

exports[`file format concats simple batch vectors into a table 8`] = `5`;

exports[`file format concats simple batch vectors into a table 9`] = `"bar"`;

exports[`file format concats simple batch vectors into a table 10`] = `"FloatingPoint"`;

exports[`file format concats simple batch vectors into a table 11`] = `5`;

exports[`file format concats simple batch vectors into a table 12`] = `1`;

exports[`file format concats simple batch vectors into a table 13`] = `null`;

exports[`file format concats simple batch vectors into a table 14`] = `null`;

exports[`file format concats simple batch vectors into a table 15`] = `4`;

exports[`file format concats simple batch vectors into a table 16`] = `5`;

exports[`file format concats simple batch vectors into a table 17`] = `"baz"`;

exports[`file format concats simple batch vectors into a table 18`] = `"Utf8"`;

exports[`file format concats simple batch vectors into a table 19`] = `5`;

exports[`file format concats simple batch vectors into a table 20`] = `"aa"`;

exports[`file format concats simple batch vectors into a table 21`] = `null`;

exports[`file format concats simple batch vectors into a table 22`] = `null`;

exports[`file format concats simple batch vectors into a table 23`] = `"bbb"`;

exports[`file format concats simple batch vectors into a table 24`] = `"cccc"`;

exports[`file format concats struct batch vectors into a table 1`] = `"struct_nullable"`;

exports[`file format concats struct batch vectors into a table 2`] = `"Struct_"`;

exports[`file format concats struct batch vectors into a table 3`] = `17`;

exports[`file format concats struct batch vectors into a table 4`] = `null`;

exports[`file format concats struct batch vectors into a table 5`] = `
Array [
  null,
  "MhRNxD4",
]
`;

exports[`file format concats struct batch vectors into a table 6`] = `
Array [
  137773603,
  "3F9HBxK",
]
`;

exports[`file format concats struct batch vectors into a table 7`] = `
Array [
  410361374,
  "aVd88fp",
]
`;

exports[`file format concats struct batch vectors into a table 8`] = `null`;

exports[`file format concats struct batch vectors into a table 9`] = `
Array [
  null,
  "3loZrRf",
]
`;

exports[`file format concats struct batch vectors into a table 10`] = `null`;

exports[`file format concats struct batch vectors into a table 11`] = `null`;

exports[`file format concats struct batch vectors into a table 12`] = `
Array [
  null,
  null,
]
`;

exports[`file format concats struct batch vectors into a table 13`] = `
Array [
  null,
  null,
]
`;

exports[`file format concats struct batch vectors into a table 14`] = `null`;

exports[`file format concats struct batch vectors into a table 15`] = `
Array [
  null,
  "78SLiRw",
]
`;

exports[`file format concats struct batch vectors into a table 16`] = `null`;

exports[`file format concats struct batch vectors into a table 17`] = `null`;

exports[`file format concats struct batch vectors into a table 18`] = `
Array [
  null,
  "0ilsf82",
]
`;

exports[`file format concats struct batch vectors into a table 19`] = `
Array [
  null,
  "LjS9MbU",
]
`;

exports[`file format concats struct batch vectors into a table 20`] = `
Array [
  null,
  null,
]
`;

exports[`file format enumerates dictionary batch vectors 1`] = `"example-csv"`;

exports[`file format enumerates dictionary batch vectors 2`] = `"Struct_"`;

exports[`file format enumerates dictionary batch vectors 3`] = `2`;

exports[`file format enumerates dictionary batch vectors 4`] = `
Array [
  "Hermione",
  25,
  Float32Array [
    -53.235599517822266,
    40.231998443603516,
  ],
]
`;

exports[`file format enumerates dictionary batch vectors 5`] = `
Array [
  "Severus",
  30,
  Float32Array [
    -62.22999954223633,
    3,
  ],
]
`;

exports[`file format enumerates dictionary batch vectors 6`] = `"example-csv"`;

exports[`file format enumerates dictionary batch vectors 7`] = `"Struct_"`;

exports[`file format enumerates dictionary batch vectors 8`] = `1`;

exports[`file format enumerates dictionary batch vectors 9`] = `
Array [
  "Harry",
  20,
  Float32Array [
    23,
    -100.23652648925781,
  ],
]
`;

exports[`file format enumerates simple batch vectors 1`] = `"foo"`;

exports[`file format enumerates simple batch vectors 2`] = `"Int"`;

exports[`file format enumerates simple batch vectors 3`] = `5`;

exports[`file format enumerates simple batch vectors 4`] = `1`;

exports[`file format enumerates simple batch vectors 5`] = `null`;

exports[`file format enumerates simple batch vectors 6`] = `3`;

exports[`file format enumerates simple batch vectors 7`] = `4`;

exports[`file format enumerates simple batch vectors 8`] = `5`;

exports[`file format enumerates simple batch vectors 9`] = `"bar"`;

exports[`file format enumerates simple batch vectors 10`] = `"FloatingPoint"`;

exports[`file format enumerates simple batch vectors 11`] = `5`;

exports[`file format enumerates simple batch vectors 12`] = `1`;

exports[`file format enumerates simple batch vectors 13`] = `null`;

exports[`file format enumerates simple batch vectors 14`] = `null`;

exports[`file format enumerates simple batch vectors 15`] = `4`;

exports[`file format enumerates simple batch vectors 16`] = `5`;

exports[`file format enumerates simple batch vectors 17`] = `"baz"`;

exports[`file format enumerates simple batch vectors 18`] = `"Utf8"`;

exports[`file format enumerates simple batch vectors 19`] = `5`;

exports[`file format enumerates simple batch vectors 20`] = `"aa"`;

exports[`file format enumerates simple batch vectors 21`] = `null`;

exports[`file format enumerates simple batch vectors 22`] = `null`;

exports[`file format enumerates simple batch vectors 23`] = `"bbb"`;

exports[`file format enumerates simple batch vectors 24`] = `"cccc"`;

exports[`file format enumerates struct batch vectors 1`] = `"struct_nullable"`;

exports[`file format enumerates struct batch vectors 2`] = `"Struct_"`;

exports[`file format enumerates struct batch vectors 3`] = `7`;

exports[`file format enumerates struct batch vectors 4`] = `null`;

exports[`file format enumerates struct batch vectors 5`] = `
Array [
  null,
  "MhRNxD4",
]
`;

exports[`file format enumerates struct batch vectors 6`] = `
Array [
  137773603,
  "3F9HBxK",
]
`;

exports[`file format enumerates struct batch vectors 7`] = `
Array [
  410361374,
  "aVd88fp",
]
`;

exports[`file format enumerates struct batch vectors 8`] = `null`;

exports[`file format enumerates struct batch vectors 9`] = `
Array [
  null,
  "3loZrRf",
]
`;

exports[`file format enumerates struct batch vectors 10`] = `null`;

exports[`file format enumerates struct batch vectors 11`] = `"struct_nullable"`;

exports[`file format enumerates struct batch vectors 12`] = `"Struct_"`;

exports[`file format enumerates struct batch vectors 13`] = `10`;

exports[`file format enumerates struct batch vectors 14`] = `null`;

exports[`file format enumerates struct batch vectors 15`] = `
Array [
  null,
  null,
]
`;

exports[`file format enumerates struct batch vectors 16`] = `
Array [
  null,
  null,
]
`;

exports[`file format enumerates struct batch vectors 17`] = `null`;

exports[`file format enumerates struct batch vectors 18`] = `
Array [
  null,
  "78SLiRw",
]
`;

exports[`file format enumerates struct batch vectors 19`] = `null`;

exports[`file format enumerates struct batch vectors 20`] = `null`;

exports[`file format enumerates struct batch vectors 21`] = `
Array [
  null,
  "0ilsf82",
]
`;

exports[`file format enumerates struct batch vectors 22`] = `
Array [
  null,
  "LjS9MbU",
]
`;

exports[`file format enumerates struct batch vectors 23`] = `
Array [
  null,
  null,
]
`;

exports[`stream format concats dictionary batch vectors into a table 1`] = `"example-csv"`;

exports[`stream format concats dictionary batch vectors into a table 2`] = `"Struct_"`;

exports[`stream format concats dictionary batch vectors into a table 3`] = `3`;

exports[`stream format concats dictionary batch vectors into a table 4`] = `
Array [
  "Hermione",
  25,
  Float32Array [
    -53.235599517822266,
    40.231998443603516,
  ],
]
`;

exports[`stream format concats dictionary batch vectors into a table 5`] = `
Array [
  "Severus",
  30,
  Float32Array [
    -62.22999954223633,
    3,
  ],
]
`;

exports[`stream format concats dictionary batch vectors into a table 6`] = `
Array [
  "Harry",
  20,
  Float32Array [
    23,
    -100.23652648925781,
  ],
]
`;

exports[`stream format concats simple batch vectors into a table 1`] = `"foo"`;

exports[`stream format concats simple batch vectors into a table 2`] = `"Int"`;

exports[`stream format concats simple batch vectors into a table 3`] = `5`;

exports[`stream format concats simple batch vectors into a table 4`] = `1`;

exports[`stream format concats simple batch vectors into a table 5`] = `null`;

exports[`stream format concats simple batch vectors into a table 6`] = `3`;

exports[`stream format concats simple batch vectors into a table 7`] = `4`;

exports[`stream format concats simple batch vectors into a table 8`] = `5`;

exports[`stream format concats simple batch vectors into a table 9`] = `"bar"`;

exports[`stream format concats simple batch vectors into a table 10`] = `"FloatingPoint"`;

exports[`stream format concats simple batch vectors into a table 11`] = `5`;

exports[`stream format concats simple batch vectors into a table 12`] = `1`;

exports[`stream format concats simple batch vectors into a table 13`] = `null`;

exports[`stream format concats simple batch vectors into a table 14`] = `null`;

exports[`stream format concats simple batch vectors into a table 15`] = `4`;

exports[`stream format concats simple batch vectors into a table 16`] = `5`;

exports[`stream format concats simple batch vectors into a table 17`] = `"baz"`;

exports[`stream format concats simple batch vectors into a table 18`] = `"Utf8"`;

exports[`stream format concats simple batch vectors into a table 19`] = `5`;

exports[`stream format concats simple batch vectors into a table 20`] = `"aa"`;

exports[`stream format concats simple batch vectors into a table 21`] = `null`;

exports[`stream format concats simple batch vectors into a table 22`] = `null`;

exports[`stream format concats simple batch vectors into a table 23`] = `"bbb"`;

exports[`stream format concats simple batch vectors into a table 24`] = `"cccc"`;

exports[`stream format concats struct batch vectors into a table 1`] = `"struct_nullable"`;

exports[`stream format concats struct batch vectors into a table 2`] = `"Struct_"`;

exports[`stream format concats struct batch vectors into a table 3`] = `17`;

exports[`stream format concats struct batch vectors into a table 4`] = `null`;

exports[`stream format concats struct batch vectors into a table 5`] = `
Array [
  null,
  "MhRNxD4",
]
`;

exports[`stream format concats struct batch vectors into a table 6`] = `
Array [
  137773603,
  "3F9HBxK",
]
`;

exports[`stream format concats struct batch vectors into a table 7`] = `
Array [
  410361374,
  "aVd88fp",
]
`;

exports[`stream format concats struct batch vectors into a table 8`] = `null`;

exports[`stream format concats struct batch vectors into a table 9`] = `
Array [
  null,
  "3loZrRf",
]
`;

exports[`stream format concats struct batch vectors into a table 10`] = `null`;

exports[`stream format concats struct batch vectors into a table 11`] = `null`;

exports[`stream format concats struct batch vectors into a table 12`] = `
Array [
  null,
  null,
]
`;

exports[`stream format concats struct batch vectors into a table 13`] = `
Array [
  null,
  null,
]
`;

exports[`stream format concats struct batch vectors into a table 14`] = `null`;

exports[`stream format concats struct batch vectors into a table 15`] = `
Array [
  null,
  "78SLiRw",
]
`;

exports[`stream format concats struct batch vectors into a table 16`] = `null`;

exports[`stream format concats struct batch vectors into a table 17`] = `null`;

exports[`stream format concats struct batch vectors into a table 18`] = `
Array [
  null,
  "0ilsf82",
]
`;

exports[`stream format concats struct batch vectors into a table 19`] = `
Array [
  null,
  "LjS9MbU",
]
`;

exports[`stream format concats struct batch vectors into a table 20`] = `
Array [
  null,
  null,
]
`;

exports[`stream format enumerates dictionary batch vectors 1`] = `"example-csv"`;

exports[`stream format enumerates dictionary batch vectors 2`] = `"Struct_"`;

exports[`stream format enumerates dictionary batch vectors 3`] = `2`;

exports[`stream format enumerates dictionary batch vectors 4`] = `
Array [
  "Hermione",
  25,
  Float32Array [
    -53.235599517822266,
    40.231998443603516,
  ],
]
`;

exports[`stream format enumerates dictionary batch vectors 5`] = `
Array [
  "Severus",
  30,
  Float32Array [
    -62.22999954223633,
    3,
  ],
]
`;

exports[`stream format enumerates dictionary batch vectors 6`] = `"example-csv"`;

exports[`stream format enumerates dictionary batch vectors 7`] = `"Struct_"`;

exports[`stream format enumerates dictionary batch vectors 8`] = `1`;

exports[`stream format enumerates dictionary batch vectors 9`] = `
Array [
  "Harry",
  20,
  Float32Array [
    23,
    -100.23652648925781,
  ],
]
`;

exports[`stream format enumerates simple batch vectors 1`] = `"foo"`;

exports[`stream format enumerates simple batch vectors 2`] = `"Int"`;

exports[`stream format enumerates simple batch vectors 3`] = `5`;

exports[`stream format enumerates simple batch vectors 4`] = `1`;

exports[`stream format enumerates simple batch vectors 5`] = `null`;

exports[`stream format enumerates simple batch vectors 6`] = `3`;

exports[`stream format enumerates simple batch vectors 7`] = `4`;

exports[`stream format enumerates simple batch vectors 8`] = `5`;

exports[`stream format enumerates simple batch vectors 9`] = `"bar"`;

exports[`stream format enumerates simple batch vectors 10`] = `"FloatingPoint"`;

exports[`stream format enumerates simple batch vectors 11`] = `5`;

exports[`stream format enumerates simple batch vectors 12`] = `1`;

exports[`stream format enumerates simple batch vectors 13`] = `null`;

exports[`stream format enumerates simple batch vectors 14`] = `null`;

exports[`stream format enumerates simple batch vectors 15`] = `4`;

exports[`stream format enumerates simple batch vectors 16`] = `5`;

exports[`stream format enumerates simple batch vectors 17`] = `"baz"`;

exports[`stream format enumerates simple batch vectors 18`] = `"Utf8"`;

exports[`stream format enumerates simple batch vectors 19`] = `5`;

exports[`stream format enumerates simple batch vectors 20`] = `"aa"`;

exports[`stream format enumerates simple batch vectors 21`] = `null`;

exports[`stream format enumerates simple batch vectors 22`] = `null`;

exports[`stream format enumerates simple batch vectors 23`] = `"bbb"`;

exports[`stream format enumerates simple batch vectors 24`] = `"cccc"`;

exports[`stream format enumerates struct batch vectors 1`] = `"struct_nullable"`;

exports[`stream format enumerates struct batch vectors 2`] = `"Struct_"`;

exports[`stream format enumerates struct batch vectors 3`] = `7`;

exports[`stream format enumerates struct batch vectors 4`] = `null`;

exports[`stream format enumerates struct batch vectors 5`] = `
Array [
  null,
  "MhRNxD4",
]
`;

exports[`stream format enumerates struct batch vectors 6`] = `
Array [
  137773603,
  "3F9HBxK",
]
`;

exports[`stream format enumerates struct batch vectors 7`] = `
Array [
  410361374,
  "aVd88fp",
]
`;

exports[`stream format enumerates struct batch vectors 8`] = `null`;

exports[`stream format enumerates struct batch vectors 9`] = `
Array [
  null,
  "3loZrRf",
]
`;

exports[`stream format enumerates struct batch vectors 10`] = `null`;

exports[`stream format enumerates struct batch vectors 11`] = `"struct_nullable"`;

exports[`stream format enumerates struct batch vectors 12`] = `"Struct_"`;

exports[`stream format enumerates struct batch vectors 13`] = `10`;

exports[`stream format enumerates struct batch vectors 14`] = `null`;

exports[`stream format enumerates struct batch vectors 15`] = `
Array [
  null,
  null,
]
`;

exports[`stream format enumerates struct batch vectors 16`] = `
Array [
  null,
  null,
]
`;

exports[`stream format enumerates struct batch vectors 17`] = `null`;

exports[`stream format enumerates struct batch vectors 18`] = `
Array [
  null,
  "78SLiRw",
]
`;

exports[`stream format enumerates struct batch vectors 19`] = `null`;

exports[`stream format enumerates struct batch vectors 20`] = `null`;

exports[`stream format enumerates struct batch vectors 21`] = `
Array [
  null,
  "0ilsf82",
]
`;

exports[`stream format enumerates struct batch vectors 22`] = `
Array [
  null,
  "LjS9MbU",
]
`;

exports[`stream format enumerates struct batch vectors 23`] = `
Array [
  null,
  null,
]
`;
